LOGO RELIABILITY: picture element with SVG primary + PNG fallback (no WebP)

--- a/meauxbility-nav-optimized.html
+++ b/meauxbility-nav-optimized.html
@@ -63,7 +63,7 @@ body.mo{overflow:hidden}
 <a href="#main" class="skip">Skip to main content</a>
 <header class="nav" id="n">
 <div class="nc">
-<a href="/" class="logo"><img src="https://cdn.shopify.com/s/files/1/0685/1654/4672/files/Untitled_design.svg?v=1755778967" alt="Meauxbility" width="200" height="60" loading="eager" crossorigin="anonymous" style="display:block;max-width:100%;height:auto;-webkit-backface-visibility:hidden;backface-visibility:hidden;"/></a>
+<a href="/" class="logo"><picture><source type="image/svg+xml" srcset="https://cdn.shopify.com/s/files/1/0685/1654/4672/files/Untitled_design.svg?v=1755778967"><img src="https://cdn.shopify.com/s/files/1/0685/1654/4672/files/Untitled_design.png?v=1755778967" alt="Meauxbility" width="200" height="60" loading="eager" crossorigin="anonymous" style="display:block;max-width:100%;height:auto;-webkit-backface-visibility:hidden;backface-visibility:hidden;"></picture></a>
 <nav><ul class="menu">
 <li><a class="nl" href="/">Home</a></li>
 <li class="ni"><a href="/pages/about-us" class="nl">About</a>
